Tentando arrumar button

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                     <span>Developer</span>
                     <h1 class="titulo"> Adrian Mira</h1>
                     <div class="container_botoes">
-                        <button class="Sobre mim"></button>
-                        <button class="Meus Projetos"></button>
-                        <button class="Contato"></button>
+                        <button class="Sobre_mimBTN">Sobre mim</button>
+                        <button class="Meus_ProjetosBTN">Meus Projetos</button>
+                        <!-- <button class="ContatoBTN">Contato</button> -->
                     </div>
                 </div>
             </section>
