tentando mudar o width do container button

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="container_botoes">
                         <button class="Sobre_mimBTN">Sobre mim</button>
                         <button class="Meus_ProjetosBTN">Meus Projetos</button>
-                        <!-- <button class="ContatoBTN">Contato</button> -->
+                        <button class="ContatoBTN">Contato</button>
                     </div>
                 </div>
             </section>
