arrumado botões e começado conteúdo

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adrian Mira</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./src/icone.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -38,7 +39,13 @@
                 </div>
             </section>
         </div>
+        <div class="conteudo">
+            <div class="card1">
+
+            </div>
+        </div>
     </main>
+    <footer></footer>
     <script src="./mobile-navbar.js"></script>
 </body>
 </html>
