--- a/index.html
+++ b/index.html
@@ -41,9 +41,20 @@
             </section>
         </div>
         <div class="conteudo">
-            <div class="card1">
-
-            </div>
+            <section class="grid">
+                <div class="card1">
+                </div>
+                <div class="card2">
+                </div>
+                <div class="card3">
+                </div>
+                <div class="card4">
+                </div>
+                <div class="card5">
+                </div>
+                <div class="card6">
+                </div>
+            </section>
         </div>
     </main>
     <footer></footer>
