--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <ul class="nav-list">
                 <li><a href="">Início</a></li>
-                <li><a href="">Meus Projetos</a></li>
+                <li><a href="./projetos.html">Meus Projetos</a></li>
                 <li><a href="">Sobre</a></li>
                 <li><a href="">Contato</a></li>
             </ul>
@@ -32,12 +32,22 @@
                     <span>Developer</span>
                     <h1 class="titulo"> Adrian Mira</h1>
                     <div class="container_botoes">
-                        <button class="Sobre_mimBTN">Sobre mim</button>
-                        <button class="Meus_ProjetosBTN">Meus Projetos</button>
-                        <button class="ContatoBTN">Contato</button>
+                        <button class="Sobre_mimBTN"><a href="#" target="_blank">Sobre mim</a></button>
+                        <button class="Meus_ProjetosBTN"><a href="#" target="_blank">Meus Projetos</a></button>
+                        <button class="ContatoBTN"><a href="#" target="_blank">Contato</a></button>
                     </div>
                 </div>
             </section>
+        </div>
+        <div class="Resumo">
+            <div class="FotoResumo">
+                <img 
+                src="https://github.com/denzysr.png" 
+                alt="Foto de Adrian Mira com uma touca e óculos" />
+            </div>
+            <div class="">
+
+            </div>
         </div>
     </main>
     <script src="./mobile-navbar.js"></script>
