adicionado texto e centralizado

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 src="https://github.com/denzysr.png" 
                 alt="Foto de Adrian Mira com uma touca e óculos" />
             </div>
-            <div class="">
-
+            <div class="textoResumo">
+                <p><a>Encantou-me encontrar esta vaga para [posição] na [Empresa], empresa que respeito muito devido à [valor compartilhado entre você e a empresa]. Como [posição atual] por [número de anos na área] anos, me desenvolvi em [habilidade relacionada à vaga] e fui capaz de [conquista quantificável relativa à vaga], entre outras conquistas profissionais.</a></p>
             </div>
         </div>
     </main>
