arrumado texto, precisa arrumar javascript

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="line3"></div>
                 
             </div>
-            <ul class="nav-list">
+            <ul class="nav-list" >
                 <li><a href="">Início</a></li>
                 <li><a href="./projetos.html">Meus Projetos</a></li>
                 <li><a href="">Sobre</a></li>
@@ -47,7 +47,7 @@
                 alt="Foto de Adrian Mira com uma touca e óculos" />
             </div>
             <div class="textoResumo">
-                <p><a>Encantou-me encontrar esta vaga para [posição] na [Empresa], empresa que respeito muito devido à [valor compartilhado entre você e a empresa]. Como [posição atual] por [número de anos na área] anos, me desenvolvi em [habilidade relacionada à vaga] e fui capaz de [conquista quantificável relativa à vaga], entre outras conquistas profissionais.</a></p>
+                <p>Olá! Eu sou Adrian Mira, um jovem apaixonado por Desenvolvimento de Sites, aplicações e estruturação lógica de programação. Bem-vindo ao meu espaço digital!</p>
             </div>
         </div>
     </main>
