adicionado arco colorido

--- a/index.html
+++ b/index.html
@@ -33,19 +33,23 @@
                     <span>Developer</span>
                     <h1 class="titulo"> Adrian Mira</h1>
                     <div class="container_botoes">
-                        <button class="Sobre_mimBTN"><a href="#" target="_blank">Sobre mim</a></button>
-                        <button class="Meus_ProjetosBTN"><a href="#" target="_blank">Meus Projetos</a></button>
-                        <button class="ContatoBTN"><a href="#" target="_blank">Contato</a></button>
+                        <button class="Sobre_mimBTN"><a href="#" >Sobre mim</a></button>
+                        <button class="Meus_ProjetosBTN"><a href="#">Meus Projetos</a></button>
+                        <button class="ContatoBTN"><a href="#">Contato</a></button>
                     </div>
                 </div>
             </section>
         </div>
         <div class="Resumo">
-            <div class="FotoResumo">
+
+            <div class="boxfoto">
+                <span></span>
+            </div>
+            <!-- <div class="FotoResumo teste">
                 <img 
                 src="https://github.com/denzysr.png" 
                 alt="Foto de Adrian Mira com uma touca e óculos" />
-            </div>
+            </div> -->
             <div class="textoResumo">
                 <p>Olá! Eu sou Adrian Mira, um jovem apaixonado por Desenvolvimento de Sites, aplicações e estruturação lógica de programação. Bem-vindo ao meu espaço digital!</p>
             </div>
