Começado pagina sobre

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <ul class="nav-list" >
                 <li><a href="">Início</a></li>
                 <li><a href="./projetos.html">Meus Projetos</a></li>
-                <li><a href="">Sobre</a></li>
+                <li><a href="./sobre.html">Sobre</a></li>
                 <li><a href="">Contato</a></li>
             </ul>
         </nav>
@@ -33,8 +33,8 @@
                     <span>Developer</span>
                     <h1 class="titulo"> Adrian Mira</h1>
                     <div class="container_botoes">
-                        <button class="Sobre_mimBTN"><a href="#" >Sobre mim</a></button>
-                        <button class="Meus_ProjetosBTN"><a href="#">Meus Projetos</a></button>
+                        <button class="Sobre_mimBTN"><a href="./sobre.html" >Sobre mim</a></button>
+                        <button class="Meus_ProjetosBTN"><a href="./projetos.html">Meus Projetos</a></button>
                         <button class="ContatoBTN"><a href="#">Contato</a></button>
                     </div>
                 </div>
@@ -54,6 +54,7 @@
                 <p>Olá! Eu sou Adrian Mira, um jovem apaixonado por Desenvolvimento de Sites, aplicações e estruturação lógica de programação. Bem-vindo ao meu espaço digital!</p>
             </div>
         </div>
+        
     </main>
     <footer></footer>
     <script src="./mobile-navbar.js"></script>
