--- a/projetos.html
+++ b/projetos.html
@@ -20,8 +20,8 @@
             </div>
             <ul class="nav-list">
                 <li><a href="./index.html">Início</a></li>
-                <li><a href="#">Projetos</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="./projetos.html">Projetos</a></li>
+                <li><a href="./sobre.html">Sobre</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
