arrumado imagens no sobre, e colocado transição.

--- a/projetos.html
+++ b/projetos.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
+    <div class="transition trn-3 is-active"></div>
     <header>
         <nav>
             <a class="logo" href="./index.html">Projetos</a>
@@ -30,5 +32,6 @@
         
     </main>
     <script src="./mobile-navbar.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
