--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
     <link rel="shortcut icon" href="./src/icone.ico" type="image/x-icon">
 </head>
 <body>
+
+<div class="transition trn-1 is-active"></div>
+
     <header>
         <nav>
-            <a class="logo" href="./index.html">Adrian Mira</a>
+            <a class="logo" href="./index.html">© Code by Adrian</a>
             <div class="mobile-menu">
                 <div class="line1"></div>
                 <div class="line2"></div>
@@ -20,7 +23,7 @@
             </div>
             <ul class="nav-list" >
                 <li><a href="">Início</a></li>
-                <li><a href="./projetos.html">Meus Projetos</a></li>
+                <li><a href="./projetos.html">Projetos</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
                 <li><a href="">Contato</a></li>
             </ul>
@@ -58,5 +61,6 @@
     </main>
     <footer></footer>
     <script src="./mobile-navbar.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
