tentado init projetos, porém com bugs, comentado.

--- a/projetos.html
+++ b/projetos.html
@@ -29,7 +29,15 @@
         </nav>
     </header>
     <main>
-        
+        <!-- <div class="cntd">
+            <div class="pjtMyLinks">
+                <div class="MyLinksimg"></div>
+                <br /> <br />
+                <h1><a target="_blank" href="https://denzysr.github.io/ProjetoMyLinks/">Projeto My Links</a></h1>
+            </div>
+            <br /> <br />
+
+        </div> -->
     </main>
     <script src="./mobile-navbar.js"></script>
     <script src="./main.js"></script>
