--- a/sobre.html
+++ b/sobre.html
@@ -22,7 +22,7 @@
             </div>
             <ul class="nav-list">
                 <li><a href="./index.html">Início</a></li>
-                <li><a href="#">Projetos</a></li>
+                <li><a href="./projetos.html">Projetos</a></li>
                 <li><a href="#">Sobre</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
