alterado cor e texto trn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 
-<div class="transition trn-1 is-active"></div>
+<div class="transition trn-1 is-active">
+    <span>Welcome !</span>
+</div>
 
     <header>
         <nav>
