--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <div class="line3"></div>
                 
             </div>
-            <ul class="nav-list" >
-                <li><a href="">Início</a></li>
+            <ul class="nav-list">
+                <li><a href="#">Início</a></li>
                 <li><a href="./projetos.html">Projetos</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -66,7 +66,7 @@
         <br /> <br />
     </main>
     <footer></footer>
-    <script src="./mobile-navbar.js"></script>
+    <script src="/mobile-navbar.js"></script>
     <script src="./main.js"></script>
     
 </body>
