--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="#">Início</a></li>
                 <li><a href="./projetos.html">Projetos</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="./contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
@@ -41,7 +41,7 @@
                     <div class="container_botoes">
                         <button class="Sobre_mimBTN"><a href="./sobre.html" >Sobre mim</a></button>
                         <button class="Meus_ProjetosBTN"><a href="./projetos.html">Meus Projetos</a></button>
-                        <button class="ContatoBTN"><a href="#">Contato</a></button>
+                        <button class="ContatoBTN"><a href="./contato.html">Contato</a></button>
                     </div>
                 </div>
             </section>
