--- a/projetos.html
+++ b/projetos.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 
-    <div class="transition trn-3 is-active"></div>
+    <div class="transition trn-3 is-active">
+        <span class="spnTrn1">My Projects.</span>
+    </div>
     <header>
         <nav>
             <a class="logo" href="./index.html">Projetos</a>
@@ -22,10 +24,10 @@
                 
             </div>
             <ul class="nav-list">
-                <li><a href="./index.html">Início</a></li>
-                <li><a href="./projetos.html">Projetos</a></li>
-                <li><a href="./sobre.html">Sobre</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./projetos.html">Projects</a></li>
+                <li><a href="./sobre.html">About me</a></li>
+                <li><a href="./contato.html">Contact</a></li>
             </ul>
         </nav>
     </header>
