--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 
             </div>
             <ul class="nav-list">
-                <li><a href="#">Início</a></li>
+                <li><a href="./index.html">Início</a></li>
                 <li><a href="./projetos.html">Projetos</a></li>
                 <li><a href="./sobre.html">Sobre</a></li>
                 <li><a href="./contato.html">Contato</a></li>
