--- a/projetos.html
+++ b/projetos.html
@@ -32,15 +32,20 @@
         </nav>
     </header>
     <main>
-        <!-- <div class="cntd">
-            <div class="pjtMyLinks">
-                <div class="MyLinksimg"></div>
-                <br /> <br />
-                <h1><a target="_blank" href="https://denzysr.github.io/ProjetoMyLinks/">Projeto My Links</a></h1>
+         <div class="containercards">
+            <div class="card1">
+                <div class="image1">
+                    <img class="pjtmylinks" src="./assets/ProjetoMyLinks.png" alt="" srcset="">
+                </div>
+                <div class="txtcard1">
+                    <h2 class="txtcardh2">Projeto My Links</h2>
+                    <p class="desccard1"> Project developed through rocketseat's discover program, the site was <br>created in 12 hours, the first project<br> made in 2023 to resume programming websites. </p>
+                </div>
+                <div class="divbuttoncard1">
+                    <button type="button" class="btncard1">Acessar Site</button>
+                </div>
             </div>
-            <br /> <br />
-
-        </div> -->
+         </div>
     </main>
     <script src="./mobile-navbar.js"></script>
     <script src="./main.js"></script>
