--- a/obrigado.html
+++ b/obrigado.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h2 class="h2ctt">Obrigado!</h2>
+    <br><br><br>
+    <h2 class="h2ctt" href="index.html">Obrigado!</h2>
 </body>
 </html>
