--- a/projetos.html
+++ b/projetos.html
@@ -42,7 +42,7 @@
                     <p class="desccard1"> Project developed through rocketseat's discover program, the site was <br>created in 12 hours, the first project<br> made in 2023 to resume programming websites. </p>
                 </div>
                 <div class="divbuttoncard1">
-                    <button type="button" class="btncard1">Acessar Site</button>
+                    <button type="button" class="btncard1"><a target="_blank" href="https://denzysr.github.io/ProjetoMyLinks/" >Acessar Site</a></button>
                 </div>
             </div>
          </div>
